[project]
name = "pesapal_v3"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Musale Martin", email = "martinmshale@gmail.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
